--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
     "moment": "^2.29.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "web3": "^1.4.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-truffle4": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3-legacy": "^2.0.0",
+    "@openzeppelin/test-helpers": "^0.5.12",
     "chai": "^4.3.4",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
+    "eth-gas-reporter": "git+https://github.com/lucaperret/eth-gas-reporter#6ac872b599adcaa8aab40808576e769c6872eb38",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.3.1",
     "hardhat": "^2.4.1",
     "hardhat-gas-reporter": "^1.0.4",
-    "eth-gas-reporter": "git+https://github.com/lucaperret/eth-gas-reporter#6ac872b599adcaa8aab40808576e769c6872eb38"
+    "web3": "^0.20.7"
   }
 }
