--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,19 @@
-PRIVATE_KEY=
-CMC_KEY=
+# used to configure the code based on network see: hardhat.config.js
+BLOCKCHAIN_NETWORK=hardhat
+
+# coin market cap key to estimate the gas cost in unit tests
+BLOCKCHAIN_CMC_KEY=
+
+# scanner API key
+BLOCKCHAIN_SCANNER_KEY=
+
+# goerli settings
+BLOCKCHAIN_GOERLI_PRIVATE_KEY=
+
+# ethereum settings
+BLOCKCHAIN_ETHEREUM_PRIVATE_KEY=
+
+# art engine
+NFT_STORAGE=
+PINATA_API_KEY=
+PINATA_API_SECRET=
